fix jumping cursor

--- a/app/components/flash-card/styles.styl
+++ b/app/components/flash-card/styles.styl
@@ -8,10 +8,21 @@
 &:nth-child(odd)
   background: rgba(#59B5C1, 0.5)
 
-textarea
-  resize: none
+.inputContainer
   width: 100%
   margin-right: 1em
+  .title
+    font-weight: 600
+    height: 1.5em
+    padding-left: 0.2em
+    align-items: flex-end
+
+.inputContainer:last-child
+  margin-right: 0
+
+textarea
+  resize: none
+  width: calc(100% - 10px - 0.2em)
   padding: 0.2em
   font-size: 1.5em
   border: 5px solid rgba(black, 0.25)
@@ -30,9 +41,6 @@ textarea
     margin: 0.25em 0
     font-size: 1.4em
     width: calc(100% - 10px - 0.2em)
-
-textarea:last-child
-  margin-right: 0
 
 .fieldsContainer
   margin: 1em
